modified the css header .navbar

--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -17,6 +17,12 @@
     padding-top: 10px;
    }
 
+
+.header .navbar {
+    height: 50px;
+}
+
+
 .navbar {
     display: flex;
     flex-direction: row;
