--- a/styles/base.css
+++ b/styles/base.css
@@ -210,6 +210,12 @@ text-align: justify;
   text-decoration: underline;      
 }
 
+.card-two ul {
+  margin-top: 4rem;
+  padding-bottom: 20px; 
+}
+
+
 footer {
 margin-top: 30px;
 color: var(--accent2);
