--- a/styles/base.css
+++ b/styles/base.css
@@ -3,7 +3,9 @@
   --main-font-color: #86CB92;
   --headings-color: #598185;
   --accent1: #404E7C;
-  --accent2: #71B48D; /* hover*/
+  --accent2: #71B48D; /* hover*/  
+  --font-body: 'Roboto', sans-serif;
+  --font-headings: 'Lato', sans-serif;
 }
 
 /*set the width to 1200px*/
@@ -13,27 +15,24 @@ header, nav {
   padding: 0 1rem;
 }
 
-
     
 
 body {
   background-color: var(--main-font-color);
   color: var(--main-font-color);
-  font-family: 'Open Sans', sans-serif;
+  font-family: var(--main-font-color);
   
 }
 
 h1, h2 {
   color: var(--main-font-color);
+  font-family: var(--headings-color);
 }
 
 a, button {
   color: var(--background-color);
+  font-family: var(--main-font-color);
 }
-
-
-
-
 
  #course-title {
     width: 1224px;
@@ -371,7 +370,9 @@ margin: 0;
   .card-one p {
     font-size: 1.2rem;
     padding: 0;
-    text-align: center;
+    text-align: justify;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 
   .card-one img {
