--- a/styles/base.css
+++ b/styles/base.css
@@ -20,18 +20,18 @@ header, nav {
 body {
   background-color: var(--main-font-color);
   color: var(--main-font-color);
-  font-family: var(--main-font-color);
+  font-family: var(--font-body);
   
 }
 
 h1, h2 {
   color: var(--main-font-color);
-  font-family: var(--headings-color);
+  font-family: var(--font-headings);
 }
 
 a, button {
   color: var(--background-color);
-  font-family: var(--main-font-color);
+  font-family: var(--font-body);
 }
 
  #course-title {
