update hover, font family, color contrast

--- a/styles/temples-large.css
+++ b/styles/temples-large.css
@@ -1,16 +1,25 @@
 /* General */
 :root {
---main-color: #251F47;
---body-color: #86CB92;
---headings-color: #598185; 
---accent1: #404E7C;
---accent2: #71B48D; /* hover*/  
---font-body: 'Roboto', sans-serif; 
---font-headings: 'Lato', sans-serif;
+  --main-color: #251F47;      
+  --body-color: #86CB92;       
+  --headings-color: #2F4F4F;   
+  --accent1: #2E3A70;         
+  --accent2: #2E7D56;          
+  --font-body: 'Roboto', sans-serif; 
+  --font-headings: 'Lato', sans-serif;
 }
+
 
 body {
   background-color: var(--body-color); 
+}
+
+h1, h2, header{
+    font-family: var(--font-headings);
+}
+
+footer {
+    font-family: var(--font-body);
 }
 
 
@@ -33,30 +42,30 @@ margin: 0 auto;
 padding: 0 1rem; 
 padding: 1rem;
 display: flex;
-align-items: center;             /* vertical center */
-justify-content: space-between;  /* space between h1 and nav */
+align-items: center;              
+justify-content: space-between;   
 }
 
 header h1 {
 margin: 0;
-color: var(--accent2);
+color: var(--body-color);
 
 }
 
 nav {
-display: block; /*show the nav menu in large screen*/
+display: block;  
 }
 
 nav ul {
 flex-direction: row;
 max-width: none;
 border-radius: 0;
-background: transparent;  /* remove nav background color so that i can use the header background */
+background: transparent; 
 }
 
 nav a {
 border-bottom: none;
-color: var(--accent2);
+color: var(--body-color);
 font-size: 2rem;
 }
 
@@ -93,7 +102,7 @@ justify-content: center;
 text-align: center;
 padding: 1rem;
 background-color: var(--main-color);   
-color: var(--accent2);                 
+color: var(--body-color);                 
 font-size: 1rem;
 border-radius: 10px;
 }
