--- a/styles/temples.css
+++ b/styles/temples.css
@@ -5,7 +5,7 @@
 --main-font-color: #86CB92;
 --headings-color: #598185;
 --accent1: #404E7C;
---accent2: #71B48D; /* hover*/  
+--accent2: #71B48D;  
 --font-body: 'Roboto', sans-serif;
 --font-headings: 'Lato', sans-serif;
 }
@@ -51,6 +51,13 @@ font-size: 2rem;
 display: inline-block;
 width: 2rem;   
 text-align: center;
+transition: color 0.3s ease, transform 0.3s ease;
+cursor: pointer; 
+}
+
+#menu:hover::before {
+  color: var(--background-color);  
+  transform: scale(1.1);  
 }
 
 #menu.open::before {
@@ -134,7 +141,7 @@ padding: 1rem 1.5rem;
 justify-content: center;
 text-align: center;
 margin: 0 auto;
-color: var(--background-color);
+color: var(--main-font-color);
 text-decoration: none;
 font-size: 1.1rem;
 transition: background-color 0.3s, color 0.3s;
@@ -207,7 +214,7 @@ font-size: 1rem;
   grid-template-columns: repeat(2, 1fr);
 }
 
-/* Optional: h2 styling */
+ 
 h2 {
   font-size: 1.7rem;
 }
