--- a/styles/place_large.css
+++ b/styles/place_large.css
@@ -4,10 +4,10 @@
   --background: #DAD2D8;
   --back1: #EC9A29;
   --back2: #A8201A;
-  --font-heading: 'Lato', sans-serif;
-  --font-body: 'Roboto', sans-serif;
-  --font-paragraph: 'Open Sans', sans-serif;
-  --font-footer: 'Noto Sans', sans-serif;
+  --font-heading: 'Roboto';
+  --font-body: 'Lato';
+  --font-paragraph: 'Lato';
+  --font-footer: 'Lato';
 }
 
 body {
@@ -146,15 +146,19 @@ footer {
   padding: 1rem;
   border-radius: 8px;
   max-width: 300px;
-  box-shadow: var(--back2);
   color: var(--background);
 }
 
-.weather-title::after {
-  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><circle fill="%23efcc00" cx="39.8" cy="22" r="12.59"/></svg>');
-  background-size: contain;
-  background-repeat: no-repeat;
+
+.weather-title img {
+  width: 60px !important;
+  height: 60px !important;
+  margin-left: 8px !important;
+  vertical-align: middle !important;
+  display: inline-block !important;
 }
+
+
   .value {
     text-align: left;
     font-size: 1.2rem;
