--- a/week05/Form-start/css/small.css
+++ b/week05/Form-start/css/small.css
@@ -91,7 +91,7 @@ footer {
 .wf1 input[type="url"],
 .wf1 input[type="date"], /*no space from input and the [type]*/
 .wf1 select,
-.wf1 inpu [type="number"]
+.wf1 input [type="number"]
 {
     background-color: #eee;
     display: block;
