--- a/week06/styles/small_screen.css
+++ b/week06/styles/small_screen.css
@@ -142,7 +142,7 @@ font-weight: bold;
 }
 
 .navbar {
-    display: none;
+display: none;
 }
 
 .navbar a {
@@ -535,7 +535,7 @@ margin-left: .1rem;
 }
 
 
-/* FOOTER */
+/* FOOTER
 footer.footer {
 text-align: center;
 font-size: 0.8rem;
@@ -557,7 +557,7 @@ gap: 15px;
 footer.footer .social-icons a img {
 width: 24px;
 height: auto;
-}
+} */
 
 
 #proj1 {
@@ -599,4 +599,29 @@ padding-bottom: 2rem;
 font-size: 1.2rem;
 background-color: var(--accent);
 }
+
+
+
+/* NEW FOOTER */
+.newsletter form {
+display: flex;
+flex-direction: column;
+gap: 10px;
+align-items: center;
+width: 100%;
+max-width: 95%;  
+margin: 0 auto;
+}
+
+.newsletter input,
+.newsletter button {
+width: 100%;         
+max-width: 100%;     
+padding: 10px;
+border: none;
+border-radius: 5px;
+font-size: 1rem;
+box-sizing: border-box;  
+}
+
 }
