--- a/week06/styles/small_screen.css
+++ b/week06/styles/small_screen.css
@@ -624,4 +624,17 @@ font-size: 1rem;
 box-sizing: border-box;  
 }
 
+
+.privacy-container {
+  width: 100vw;        
+  margin: 0 auto;       
+  padding-left: 1rem;   
+  padding-right: 1rem;
+  box-sizing: border-box;
 }
+
+}
+
+
+
+
