--- a/week06/styles/small_screen.css
+++ b/week06/styles/small_screen.css
@@ -626,11 +626,31 @@ box-sizing: border-box;
 
 
 .privacy-container {
-width: 100vw;        
+width: 100%;        
 margin: 0 auto;       
-padding-left: 1rem;   
-padding-right: 1rem;
+padding-left: 1rem !important;   
+padding-right: 1rem !important;
 box-sizing: border-box;
+max-width: 600px;
+}
+
+
+
+
+
+
+.privacy-container h1 {
+font-size: 1.8rem;
+}
+
+.privacy-container h2 {
+font-size: 1.4rem;
+}
+
+.privacy-container p,
+.privacy-container li {
+font-size: 1rem;
+line-height: 1.6;
 }
 }
 
