--- a/week06/styles/large_screen.css
+++ b/week06/styles/large_screen.css
@@ -13,6 +13,7 @@ height: 100%;
 font-family: var(--font-secondary);
 margin: 0;
 padding: 0;
+overflow-x: hidden; /*pastilan, this fixed all the problem of horizontal swiping*/
 }
 
 
