--- a/week06/styles/large_screen.css
+++ b/week06/styles/large_screen.css
@@ -674,6 +674,21 @@ border-radius: 5px;
 font-size: 1rem;
 box-sizing: border-box;
 }
+
+.bebet {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+
+
+
 .newsletter button {
 background-color: var(--highlight-color);
 color: var(--background);
@@ -786,3 +801,4 @@ color: var(--accent);
   .social-links-mobile {
     display: none;
   }
+
