--- a/week06/styles/large_screen.css
+++ b/week06/styles/large_screen.css
@@ -724,20 +724,19 @@ text-decoration: none;
 
 /*PRIVACY*/
 .privacy-container {
-background-color: rgb(202, 235, 247);
-max-width: 1200px;
+background-color: var(--background);
+width: 100%;
 margin: 0 auto;
 padding: 2rem;
 font-family: var(--font-secondary);
 color: var(--primary-color);
-line-height: 1.7;
 box-sizing: border-box;
 }
 
 
 
 .privacy-container h1 {
-font-size: 2.5rem;
+font-size: 2rem;
 text-align: center;
 margin-bottom: 1rem;
 color: var(--primary-color);
@@ -756,7 +755,7 @@ margin-bottom: 3rem;
 }
 
 .privacy-container h2 {
-font-size: 2rem;
+font-size: 1.6rem;
 margin-bottom: 1rem;
 color: var(--accent);
 }
