--- a/week06/styles/medium.css
+++ b/week06/styles/medium.css
@@ -41,16 +41,16 @@ font-size: 1rem;
 box-sizing: border-box;  
 }
 
-.privacy-container {
+/* .privacy-container {
 width: 100%;        
 margin: 0 auto;       
 padding-left: 1rem !important;   
 padding-right: 1rem !important;
 box-sizing: border-box;
 max-width: 600px;
-}
+} */
 
-.privacy-container h1 {
+/* .privacy-container h1 {
 font-size: 1.8rem;
 }
 
@@ -62,7 +62,7 @@ font-size: 1.4rem;
 .privacy-container li {
 font-size: 1rem;
 line-height: 1.6;
-}
+} */
 
 /*CLOSE BUTTON8*/
 .close-btn
