--- a/week06/styles/large_screen.css
+++ b/week06/styles/large_screen.css
@@ -800,3 +800,32 @@ display: none;
 display: none;
 }
 
+/*FAQS*/
+
+.faq-container h1 {
+font-size: 2rem;
+margin-left: 1rem;
+}
+
+.faq-container {
+margin: 2rem auto;
+font-family: var(--font-secondary);
+color: var(--primary-color);
+}
+
+.faq-item {
+border-bottom: 1px solid var(--primary-color);
+padding: 1rem 0;
+}
+
+.faq-item h2 {
+margin-left: 1rem;
+cursor: pointer;
+font-size: 1.5rem;
+}
+
+.faq-item p {
+margin-left: 1.5rem;
+text-align: left;
+}
+
