--- a/week06/styles/medium.css
+++ b/week06/styles/medium.css
@@ -65,10 +65,10 @@ line-height: 1.6;
 } */
 
 /*CLOSE BUTTON8*/
-.close-btn
+/* .close-btn
 {
     display: none;
-}
+} */
 
 
 /*ADDITIONAL IN NAV MENU OF MOBILE VIEW*/
