--- a/week06/styles/small_screen.css
+++ b/week06/styles/small_screen.css
@@ -122,10 +122,10 @@ border-radius: 10px;
 .navbar.active {
 right: 0;  
 display: flex;
-width: 90%;  
+width: 60%;  
 max-width: none;
 margin: 0;
-padding-top: 2rem;
+padding-top: 1.5rem;
 background-color: var(--primary-color);
 flex-direction: column;
 box-sizing: border-box;
@@ -141,7 +141,7 @@ display: none;
 display: block;
 text-align: center;
 padding: 10px 0;
-font-size: 1.3rem;
+font-size: 1.1rem;
 color: var(--secondary-color);
 text-decoration: none;
 margin-right: 0 !important;
@@ -659,5 +659,56 @@ justify-content: center;
 .navbar a.active .contact-info-mobile,
 .navbar a.active .social-links-mobile {
 display: flex;
+}
+
+/*FAQS*/
+.faq-container {
+margin-left: .5rem;
+}
+
+.faq-container h1 {
+font-size: 1.7rem;
+margin-left: .2rem;
+}
+
+.faq-item {
+margin-bottom: 1rem; /* space  each FAQ block h2 */
+}
+
+
+.faq-item h2 {
+display: inline;  
+cursor: pointer;
+user-select: none;
+color: var(--primary-color);
+font-weight: bold;
+font-size: 1rem;
+margin-left: .1rem;
+}
+
+
+.faq-item h2::after {
+content: " ▼";
+font-size: 1.2em;
+display: inline-block;
+transition: transform 0.3s ease;
+color: var(--primary-color);
+vertical-align: middle;
+}
+
+
+.faq-item.active h2::after {
+transform: rotate(180deg);
+}
+
+.faq-item p {
+display: none;
+}
+
+.faq-item.active p {
+display: block;
+text-align: left;
+margin-top: -3px;
+margin-left: .6rem;
 }
 }
