--- a/week06/styles/large_screen.css
+++ b/week06/styles/large_screen.css
@@ -468,7 +468,7 @@ border: 1rem solid var(--primary);
 
 .reason {
 text-align: left ;
-margin-left: .7rem !important;
+margin-left: 1.6rem !important;
 display: block;
 }
 
